tests/passing/if_elif.tails
func tests() -> unit:
  discard if true: pass elif false: pass
