tests/failing/parser_function_missing_name.tails
func () -> unit:
  pass

func tests() -> unit:
  pass
